# SlavnaBot

./: .gitignore  config.py  logging_config.py  main.py  pyproject.toml
bot/: scheduler.py
bot/db/: __init__.py  db.py
bot/filters/: __init__.py  filters.py
bot/handlers/: date_handlers.py  extra_handlers.py  handlers.py  period_handlers.py
bot/keyboards/: calendar.py  keyboards.py  pagination_kb.py
bot/texts/: other_texts.py  staff_texts.py
googlesheets/: docs_parsing.py  google_creds.json  make_record.py  mydocs_parsing.py  tours_filtering.py
tripster/: class_tparser.py  services.py  texts.py  tparsing.py
